<resources>
    <string name="app_name">myPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="updated_some_seconds_ago">updated just now</string>
    <string name="updated_seconds_ago">updated %d seconds ago</string>
    <string name="updated_minutes_ago">updated %d mins ago</string>
    <string name="updated_single_minute_ago">updated a min ago</string>
    <string name="add_asset_action">"Add asset to your portfolio"</string>
    <string name="refresh_data_action">"Refresh data"</string>
    <string name="menu_asset_delete">Delete</string>

    <string name="showing_stock_data_for">Showing stock data for</string>
    <string name="low_price">today\'s low</string>
    <string name="high_price">today\'s high</string>
    <string name="open_price">open price</string>
    <string name="market_closed">(market closed)</string>
    <string name="stock_price">Stock price</string>
    <string name="stock_history">Stock price history</string>
    <string name="description">Info</string>
    <string name="portfolio_total">Portfolio value:</string>
    <string name="ticker">Ticker</string>
    <string name="price">Price</string>
    <string name="quantity">Holdings</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_button">Add</string>
    <string name="choice_selected">type</string>
    <string name="stock">Stock</string>
    <string name="crypto">Crypto</string>
    <string name="select_asset">Select asset</string>
    <string name="invalidstock">Error has occured. Please check if your ticker is valid or try again.</string>
    <string name="emptystock">Ticker and Quantity should not be empty.</string>
    <string name="delete">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete this asset?</string>
</resources>
