<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?android:attr/actionBarSize"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/portfolio_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_margin">

        <TextView
            android:id="@+id/portfolio_total"
            android:hint="@string/portfolio_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tiny_text_size"/>

        <TextView
            android:id="@+id/portfolio_value"
            android:hint="@string/portfolio_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/portfolio_total"
            android:textSize="@dimen/semi_large_text_size"/>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/table_headers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFEEEFEF"
        android:padding="@dimen/small_margin">

        <TextView
            android:id="@+id/header_ticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/ticker"
            android:textSize="@dimen/tiny_text_size"/>

        <TextView
            android:id="@+id/header_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/price"
            android:textSize="@dimen/tiny_text_size"/>

        <TextView
            android:id="@+id/header_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/quantity"
            android:gravity="end"
            android:textSize="@dimen/tiny_text_size"/>

    </LinearLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:id="@android:id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
        </android.support.v4.widget.SwipeRefreshLayout>



</LinearLayout>