<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFBB33" >
    <TextView
        android:text="@string/select_asset"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:layout_margin="10dp"
        android:textColor="@color/cardview_light_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    </LinearLayout>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_asset_name_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/dialog_asset_name"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/ticker" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dialog_asset_quantity_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Proc fontFamily? Je duvod mit v jedinem EditTextu jiny font nez v cele appce? -->
        <EditText
            android:id="@+id/dialog_asset_quantity"
            android:inputType="numberDecimal"
            android:digits="0123456789.,"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:hint="@string/quantity"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>